@@ -195,12 +195,22 @@ border-color: black;
 		}
 
 		$stats = amule_get_stats();
-		if ( $stats["id"] == 0 ) {
-			echo "Not connected";
-		} elseif ( $stats["id"] == 0xffffffff ) {
-			echo "Connecting ...";
+		if ( $stats["kad_connected"] == 1 ) {
+			echo "Connected";
+				if ( $stats["kad_firewalled"] == 1 ) {
+					echo " to KAD (firewalled), ";
+				} else {
+					echo " to KAD, ";
+				}
 		} else {
-			echo "Connected with ", (($stats["id"] < 16777216) ? "low" : "high"), " ID to ",
+			echo "Not connected to KAD, ";
+		}
+		if ( $stats["id"] == 0 ) {
+			echo "not connected to ED2K";
+		} elseif ( $stats["id"] == 0xffffffff ) {
+			echo "connecting to ED2k";
+		} else {
+			echo "connected with ", (($stats["id"] < 16777216) ? "low" : "high"), " ID to ",
 				$stats["serv_name"], "  ", $stats["serv_addr"];
 		}
 		echo '<br>&nbsp;&nbsp;<b>Speed:</b> Up: ', CastToXBytes($stats["speed_up"]), 'ps',
